# advanced-auth-service

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  db_data.sql  docker-compose.yaml  entrypoint.sh  main.py  pyproject.toml  pytest.ini  ruff.toml  test.py
alembic/: env.py
alembic/versions/: 16e5f67427c3_initial_tables.py  506a5dea3930_.py  61f604a59579_.py  6a2604092c8d_.py  6b74dbf2bf21_asd.py  73240b7f4db8_l.py  8211ffe0ce4b_.py  8abd16bdbe10_.py  8d04183bbb4a_initial_tables.py  9346c7287a06_remove_cascade.py  b17e8de1a541_add_index_to_the_field.py  f5ce1e4f957f_asd.py
src/common/: config.py  utils.py
src/common/storage/repositories/: abstract.py
src/core/: __init__.py  config.py  constants.py  di.py  dto.py  exceptions.py  security.py  utils.py
src/core/config/: __init__.py  auth.py  oauth.py  storage.py
src/core/dto/: permissions.py  tokens.py  users.py
src/core/services/: interfaces.py  notifications.py
src/core/storage/: transations.py
src/core/storage/orm/: config.py  db.py
src/core/storage/orm/models/: __init__.py  common.py  permissions.py  user.py
src/core/storage/repositories/: abstract.py  base.py  sqlalchemy.py
src/core/storages/: db.py
src/core/storages/orm/models/: __init__.py  permissions.py  user.py
src/core/storages/repositories/: base.py  redis.py  sqlalchemy.py
src/core/web/: schemas.py
src/modules/authentication/: __init__.py  dto.py  exceptions.py  handlers.py  schemas.py  service.py  utils.py
src/modules/authorization/: __init__.py  dto.py  exceptions.py  middlewares.py  schemas.py  service.py
src/modules/jwt/: __init__.py
src/modules/mfa/: __init__.py  dto.py  exceptions.py  service.py
src/modules/oauth/: __init__.py  dto.py  exceptions.py  service.py
src/usecases/: __init__.py  auth.py  mfa.py  oauth.py
src/usecases/auth/: login_user.py  register_user.py
src/usecases/mfa/: login_user.py  send_code.py  setup.py
src/usecases/oauth/: login_user.py
tests/: __init__.py  conftest.py
tests/api/: __init__.py
tests/repositories/: conftest.py  test_redis.py  test_sqlalchemy.py
tests/services/: conftest.py  test_authentication.py  test_authorization.py  test_mfa.py  test_notification.py
tests/usecases/: conftest.py  test_login_user.py  test_register_user.py  test_setup_user_mfa.py
tests/usecases/interactive/: conftest.py  test_can_pass_mfa_with_email_code.py  test_login_user_with_mfa.py  test_mfa_with_email_code.py  test_mfa_with_otp.py
