[tool.poetry]
name = "advanced-auth-service"
version = "0.1.0"
description = ""
authors = ["artorias <kyrylbarabash@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
blacksheep = {extras = ["full"], version = "^2.0.7"}
uvicorn = "^0.32.1"
python-dotenv = "^1.0.1"
loguru = "^0.7.2"
sqlalchemy = "^2.0.36"
psycopg2-binary = "^2.9.10"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
pytest = "^8.3.4"
pytest-asyncio = "^0.24.0"
ruff = "^0.8.1"
blacksheep-cli = "^0.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest]
asyncio_mode = "auto"

[tool.isort]
multi_line_output = 1

[tool.mypy]
exclude = ["tests/", "test.py"]
check_untyped_defs = true
disallow_untyped_calls = true
warn_unused_ignores = false
