[tool.poetry]
name = "advanced-auth-service"
version = "0.1.0"
description = ""
authors = ["artorias <kyrylbarabash@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
loguru = "^0.7.2"
sqlalchemy = "^2.0.36"
asyncpg = "^0.30.0"
passlib = "^1.7.4"
punq = "^0.7.0"
alembic = "^1.14.0"
pyjwt = "^2.10.1"
fastapi = "^0.115.6"
pyotp = "^2.9.0"
qrcode = "^8.0"
pillow = "^11.0.0"
aiosmtplib = "^3.0.2"
aioredis = "^2.0.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
pytest = "^8.3.4"
pytest-asyncio = "^0.24.0"
ruff = "^0.8.1"
faker = "^33.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest]
asyncio_mode = "auto"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "session"

[tool.isort]
multi_line_output=3
include_trailing_comma=true
line_length=100
lines_after_imports=2
lines_between_sections=1
lines_between_types=0
force_alphabetical_sort_within_sections=true
ensure_newline_before_comments=true
combine_as_imports=true
combine_star=true
skip_gitignore=true
balanced_wrapping=true
force_grid_wrap=2
src_paths=["src", "app", "core"]
skip_glob=[
    ".git",
    ".idea",
    ".vscode",
    "venv",
    ".venv",
]
known_frameworks=["fastapi", "django", "aiohttp", "aiogram"]
known_libs=["redis", "mongorepo", "orjson", "pydantic"]
known_first_party=["src", "app", "core"]
sections=[
    "FUTURE",
    "STDLIB",
    "FRAMEWORKS",
    "LIBS", 
    "THIRDPARTY",
    "FIRSTPARTY",
    "LOCALFOLDER",
]

[tool.mypy]
exclude = ["tests/", "test.py"]
check_untyped_defs = true
disallow_untyped_calls = true
warn_unused_ignores = false
